change manifest and pipeline

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -54,7 +54,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: fabriciosaand/kube-news:v2
+        image: fabriciosaand/kube-news:{{TAG}}
         ports:
         - containerPort: 8080
         env:
